--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.8",
-    "@strapi/plugin-users-permissions": "4.1.8",
     "@strapi/plugin-i18n": "4.1.8",
-    "pg": "8.6.0"
+    "@strapi/plugin-users-permissions": "4.1.8",
+    "@strapi/strapi": "4.1.8",
+    "pg": "8.6.0",
+    "strapi-plugin-comments": "^2.1.0",
+    "strapi-plugin-ezforms": "0.0.7"
   },
   "author": {
     "name": "A Strapi developer"
